test/Fail/Issue3566-4.agda
record R : Set where
  a : R
  a = r -- r should not ever be in scope
